--- a/daili.yaml
+++ b/daili.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.93
-  maximum: 8.91
-  average: 8.48
-  UpdateDay: '2022-05-11T06:30:26.938874'
+  minimum: 6.85
+  maximum: 7.82
+  average: 7.31
+  UpdateDay: '2022-05-11T09:30:23.902013'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 47255
+  Rank: 47356
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 10.46
   UpdateDay: '2022-05-11T06:30:26.939845'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 43884
+  Rank: 43984
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -73,7 +73,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 35593
+  Rank: 35443
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,27 +83,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.4
-  maximum: 63.77
-  average: 61.14
-  UpdateDay: '2022-05-11T06:32:01.467357'
+  minimum: 60.32
+  maximum: 152.77
+  average: 91.32
+  UpdateDay: '2022-05-11T09:30:26.433109'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 31902
+  Rank: 31963
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 11.7
-  maximum: 54.03
-  average: 37.29
-  UpdateDay: '2022-05-11T06:30:27.399032'
+  minimum: 31.58
+  maximum: 49.32
+  average: 41.43
+  UpdateDay: '2022-05-11T09:30:24.125983'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 31772
+  Rank: 31873
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -113,12 +113,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.65
-  maximum: 41.51
-  average: 38.35
-  UpdateDay: '2022-05-11T06:32:01.189245'
+  minimum: 12.52
+  maximum: 43.96
+  average: 26.78
+  UpdateDay: '2022-05-11T09:30:24.083324'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 28825
+  Rank: 28921
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -131,7 +131,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 28471
+  Rank: 28566
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,12 +141,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 49.45
-  maximum: 56.07
-  average: 52.56
-  UpdateDay: '2022-05-11T06:32:01.441065'
+  minimum: 75.05
+  maximum: 121.06
+  average: 94.27
+  UpdateDay: '2022-05-11T09:30:26.446604'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 25944
+  Rank: 26025
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -156,27 +156,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.08
-  maximum: 44.85
-  average: 40.71
-  UpdateDay: '2022-05-11T06:32:01.308280'
+  minimum: 41.49
+  maximum: 45.94
+  average: 43.87
+  UpdateDay: '2022-05-11T09:30:24.222450'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 22515
+  Rank: 22582
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 83.96
-  maximum: 88.27
-  average: 85.94
-  UpdateDay: '2022-05-11T06:32:01.702593'
+  minimum: 111.2
+  maximum: 145.57
+  average: 126.0
+  UpdateDay: '2022-05-11T09:30:26.944819'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 22176
+  Rank: 22218
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -188,7 +188,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 21132
+  Rank: 21232
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,7 +203,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 20795
+  Rank: 20895
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   type: trojan
@@ -218,7 +218,7 @@ proxies:
   average: 243.98
   UpdateDay: '2022-05-11T06:31:25.981810'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 20149
+  Rank: 20191
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,7 +230,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 19386
+  Rank: 19428
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -245,37 +245,37 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 19185
-- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
-  server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 37.95
-  maximum: 45.03
-  average: 40.93
-  UpdateDay: '2022-05-11T06:32:01.196770'
-  PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 16509
+  Rank: 19285
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
+  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.27
-  maximum: 50.94
-  average: 47.11
-  UpdateDay: '2022-05-11T06:32:01.427259'
+  minimum: 41.65
+  maximum: 56.69
+  average: 49.51
+  UpdateDay: '2022-05-11T09:30:26.423954'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 16492
+  Rank: 16588
+- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  server: jp-tyo-04-tr.cdn.savoy.click
+  port: 889
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: SfobRIcergHchqBFzzua
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 39.81
+  maximum: 46.14
+  average: 43.9
+  UpdateDay: '2022-05-11T09:30:24.116097'
+  PFirstFoundDay: '2022-03-20T12:36:16.101193'
+  Rank: 16556
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -290,7 +290,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 16028
+  Rank: 16070
 - alterId: 0
   cipher: auto
   http-opts:
@@ -315,7 +315,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 15921
+  Rank: 15971
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -325,12 +325,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.76
-  maximum: 40.41
-  average: 40.03
-  UpdateDay: '2022-05-11T06:32:01.309348'
+  minimum: 41.68
+  maximum: 75.39
+  average: 55.1
+  UpdateDay: '2022-05-11T09:30:24.281830'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 15357
+  Rank: 15459
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -353,8 +353,8 @@ proxy-groups:
   - www.tokyo2023.ga:443@trojan
   - www.seetheworldjp.ga:443@trojan
   - www.tokyo2021.ga:443@trojan
-  - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - tky3.ssgnode.ga:443@trojan
+  - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - zgao.shop:443@trojan
   - 35.153.162.49:27080@vmess
   - ssl.tcpbbr.net:443@trojan
